Textos de las listas traducidas

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -352,5 +352,26 @@
   "resendCode": "Resend code",
   "confirmTextEmailCode": "Confirm email",
   "relationshipConsumer": "Relationship consumer",
-  "typeBeneficiary": "Type of beneficiary"
+  "typeBeneficiary": "Type of beneficiary",
+  "other": "OTHER",
+  "institution": "INSTITUTION",
+  "unknown": "UNKNOWN",
+  "ex_spouse": "EX_SPOUSE",
+  "children": "CHILDREN",
+  "parent": "PARENT",
+  "sibling": "SIBLING",
+  "relative": "RELATIVE",
+  "self": "SELF",
+  "friend": "FRIEND",
+  "business_partner": "BUSINESS_PARTNER",
+  "customer": "CUSTOMER",
+  "employee": "EMPLOYEE",
+  "branch_office": "BRANCH_OFFICE",
+  "subsidiary_company": "SUBSIDIARY_COMPANY",
+  "holding_company": "HOLDING_COMPANY",
+  "supplier": "SUPPLIER",
+  "creditor": "CREDITOR",
+  "debtor": "DEBTOR",
+  "franchisee": "FRANCHISEE",
+  "not_related": "NOT_RELATED"
 }
