--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -345,5 +345,26 @@
   "resendCode": "Reenviar código",
   "confirmTextEmailCode": "Confirmar correo electrónico",
   "relationshipConsumer": "Relación con el usuario",
-  "typeBeneficiary": "Tipo de Beneficiario"
+  "typeBeneficiary": "Tipo de Beneficiario",
+  "other": "OTRO",
+  "institution": "INSTITUCIÓN",
+  "unknown": "DESCONOCIDA",
+  "ex_spouse": "EX_CÓNYUGE",
+  "children": "HIJOS",
+  "parent": "PADRE",
+  "sibling": "HERMANO",
+  "relative": "FAMILIAR",
+  "self": "PROPIO",
+  "friend": "AMIGO",
+  "business_partner": "SOCIO_COMERCIAL",
+  "customer": "CLIENTE",
+  "employee": "EMPLEADO",
+  "branch_office": "SUCURSAL",
+  "subsidiary_company": "EMPRESA_SUBSIDIARIA",
+  "holding_company": "EMPRESA_MADRE",
+  "supplier": "PROVEEDOR",
+  "creditor": "ACREEDOR",
+  "debtor": "DEUDOR",
+  "franchisee": "FRANQUICIADO",
+  "not_related": "NO_RELACIONADO"
 }
