--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -173,6 +173,8 @@
   "swapTo": "a",
   "swapSpend": "Total a gastar",
   "swapReceive": "Total que va a recibir",
+  "swapPriceWarning": " El valor a recibir mostrado es solo referencial y el resultado final puede variar un poco",
+  "swapSuccessDelayWarning": "La acreditación en su cuenta bancaria o billetera de activos digitales puede tardar algunos minutos, si luego de 20 minutos aún no ha sido acreditado por favor comuníquese con atención al cliente",
   "swapPriceQuote": "Presupuesto / Precio",
   "swapBackButtonTitle": "Volver al intercambio",
   "swapExchangeServiceText": "Los servicios de intercambio están disponibles a través de proveedores de API de terceros",
@@ -331,16 +333,16 @@
   "accept": "Aceptar",
   "deny": "Rechazar",
   "iAcceptPatriot": "Acepto la",
-  "patrioticLaw": "Ley Patriótica (USA PATRIOT ACT)", 
-  "passwordsDontMatch": "Las contraseñas no coinciden", 
+  "patrioticLaw": "Ley Patriótica (USA PATRIOT ACT)",
+  "passwordsDontMatch": "Las contraseñas no coinciden",
   "acceptTermsAndConditions": "Por favor acepte los términos y condiciones",
   "acceptPatriot": "Por favor acepte la ley patriótica",
   "passwordLength": "La contraseña debe tener al menos 8 caracteres",
   "passwordOneCapitalLetter": "La contraseña debe tener al menos una letra mayúscula",
   "passwordOneSpecialCharacter": "La contraseña debe tener al menos un caracter especial",
   "confirmEmail": "Confirmar correo electrónico",
-  "confirmEmailCodeText":"Por favor ingrese el código de verificación de 6 digitos que le enviamos a su correo electrónico",
-  "confirmEmailCodePlaceholder":"Por favor ingrese el código de verificación de 6 digitos",
+  "confirmEmailCodeText": "Por favor ingrese el código de verificación de 6 digitos que le enviamos a su correo electrónico",
+  "confirmEmailCodePlaceholder": "Por favor ingrese el código de verificación de 6 digitos",
   "codeEmailLabel": "Código de verificación",
   "resendCode": "Reenviar código",
   "confirmTextEmailCode": "Confirmar correo electrónico"
