fix: visual del formulario.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -353,10 +353,12 @@
   "codeEmailLabel": "Code",
   "resendCode": "Resend code",
   "confirmTextEmailCode": "Confirm email",
-  "relationshipConsumer": "Relationship consumer",
+  "relationshipConsumer": "What relationship do you have with this beneficiary?",
   "typeBeneficiary": "Type of beneficiary",
   "other": "OTHER",
   "institution": "INSTITUTION",
+  "institutionAddress": "Institution address",
+  "beneficiaryCountry": "Country of residence of the beneficiary",
   "unknown": "UNKNOWN",
   "ex_spouse": "EX_SPOUSE",
   "children": "CHILDREN",
