--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -346,7 +346,9 @@
   "codeEmailLabel": "Código de verificación",
   "resendCode": "Reenviar código",
   "confirmTextEmailCode": "Confirmar correo electrónico",
-  "relationshipConsumer": "Relación con el usuario",
+  "relationshipConsumer": "¿Que relación tiene con este beneficiario?",
+  "beneficiaryCountry": "País de residencia del beneficiario",
+  "institutionAddress": "Dirección de la institución",
   "typeBeneficiary": "Tipo de Beneficiario",
   "other": "OTRO",
   "institution": "INSTITUCIÓN",
