[WIP] Fixing pdf

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -377,5 +377,6 @@
   "creditor": "CREDITOR",
   "debtor": "DEBTOR",
   "franchisee": "FRANCHISEE",
-  "not_related": "NOT_RELATED"
+  "not_related": "NOT_RELATED",
+  "namePdfTransactionHistory": "transaction-history"
 }
