[FIX] Showing activate account banner just for non active clients

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -319,7 +319,7 @@
   "temporaryBlockedTransfer": "Transfers to other users are temporarily not allowed",
   "viewAllTransactions": "View all transactions",
   "ownersName": "Owner`s name",
-  "uploadDocuments": "Sube tus documentos para completar el proceso de registro, click aqui",
+  "uploadDocuments": "Upload your documents to complete the sign up process, click here",
   "informationAccountText": "Account Information",
   "beneficiaryInformation": "Beneficiary information",
   "bankAccountInformation": "Bank address",
