--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -311,8 +311,8 @@
   "registeredSuccessfully": "Te has registrado exitosamente, espera la aprobación de un admin.",
   "temporaryBlockedTransfer": "Las trasnferencias a otros usuarios estan temporalmente bloqueadas.",
   "viewAllTransactions": "Ver todas las transacciones",
-  "ownersName": "Owner`s name",
-  "uploadDocuments": "Upload your documents to complete the sign up process, click here",
+  "ownersName": "Nombre del dueño",
+  "uploadDocuments": "Sube tus documentos para completar el proceso de registro, click aqui",
   "informationAccountText": "Información de la cuenta",
   "beneficiaryInformation": "Información del beneficiario",
   "bankAccountInformation": "Dirección del banco",
