first step pn working

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -378,5 +378,31 @@
   "debtor": "DEBTOR",
   "franchisee": "FRANCHISEE",
   "not_related": "NOT_RELATED",
-  "namePdfTransactionHistory": "transaction-history"
+  "namePdfTransactionHistory": "transaction-history",
+  "uploadDocumentsTitle": "Upload documents",
+  "subtitleUploadDocuments": "You can choose between 2 account types  ",
+  "personalAccount": "Personal account",
+  "businessAccount": "Business account",
+  "titleNaturalPerson": "Personal",
+  "accountRegistration": "Account registration",
+  "helpTextName": "Please write your first name.",
+  "helpTextMiddleName": "Fill this space only if you have a middle name on your ID. If you don’t leave the space blank.",
+  "helpTextSurname": "Please write your last name.",
+  "helpTextSecondSurname": "Please write your other last name.",
+  "helpTextIdNumber": "Enter your personal identification number.",
+  "helpTextTaxIDNumber": "Write your TAX ID number. (SSN, ITIN).",
+  "helpTextIDCountry": "Select the country that issued your ID document.",
+  "helpTextDateOfBirth": "Date of Birth should match the individual's identity document.",
+  "helpTextPhone": "Please fill in a contact phone number.",
+  "helpTextCountry": "Select your address country.",
+  "helpTextState": "Select your address state.",
+  "helpTextCity": "Write down your city address.",
+  "helpTextAddressOne": "Write down your main address.",
+  "helpTextAddressTwo": "Fill this space if you have an apartment or unit number.",
+  "helpTextAddressPostalCode": "Write down your postal code.",
+  "helpTextPassport": "Please write your passport number.",
+  "otherLastName": "Other last name",
+  "taxIdLabel": "Tax ID",
+  "passportOrTaxIdEmpty": "Passport or Tax ID cannot be empty",
+  "error": "Error"
 }
