--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -371,6 +371,31 @@
   "debtor": "DEUDOR",
   "franchisee": "FRANQUICIADO",
   "not_related": "NO_RELACIONADO",
-  "namePdfTransactionHistory": "historico-transacciones"
-
+  "namePdfTransactionHistory": "historico-transacciones",
+  "uploadDocumentsTitle": "Subir documentos",
+  "subtitleUploadDocuments": "Puedes elegir entre 2 tipos de cuenta",
+  "personalAccount": "Cuenta personal",
+  "businessAccount": "Cuenta de negocios",
+  "titleNaturalPerson": "Personal",
+  "accountRegistration": "Registro de cuenta",
+  "helpTextName": "Por favor escriba su nombre de pila.",
+  "helpTextMiddleName": "Rellene este espacio solo si tiene un segundo nombre en su identificación. Si no, deje el espacio en blanco.",
+  "helpTextSurname": "Por favor escriba su apellido.",
+  "helpTextSecondSurname": "Por favor escriba su segundo apellido.",
+  "helpTextIdNumber": "Escriba su número de identificación personal.",
+  "helpTextTaxIDNumber": "Escriba su número de identificación fiscal (SSN, ITIN).",
+  "helpTextIDCountry": "Seleccione el país que emitió su documento de identidad.",
+  "helpTextDateOfBirth": "La fecha de nacimiento debe coincidir con el documento de identidad de la persona.",
+  "helpTextPhone": "Por favor llene un número de teléfono de contacto.",
+  "helpTextCountry": "Seleccione su país de dirección.",
+  "helpTextState": "Seleccione su estado de dirección.",
+  "helpTextCity": "Escriba su dirección de ciudad.",
+  "helpTextAddressOne": "Escriba su dirección principal.",
+  "helpTextAddressTwo": "Rellene este espacio si tiene un número de apartamento o unidad.",
+  "helpTextAddressPostalCode": "Rellene este espacio si tiene un número de apartamento o unidad.",
+  "helpTextPassport": "Por favor escriba su número de pasaporte.",
+  "otherLastName": "Segundo apellido",
+  "taxIdLabel": "Número de identificación fiscal",
+  "passportOrTaxIdEmpty": "Por favor ingrese su número de pasaporte o número de identificación fiscal",
+  "error": "Error"
 }
