--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -381,6 +381,7 @@
   "namePdfTransactionHistory": "transaction-history",
   "uploadDocumentsTitle": "Upload documents",
   "subtitleUploadDocuments": "You can choose between 2 account types  ",
+  "onboardingTitle": "Create a Noba account, it's free!",
   "personalAccount": "Personal account",
   "businessAccount": "Business account",
   "titleNaturalPerson": "Personal",
