--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -374,6 +374,7 @@
   "namePdfTransactionHistory": "historico-transacciones",
   "uploadDocumentsTitle": "Subir documentos",
   "subtitleUploadDocuments": "Puedes elegir entre 2 tipos de cuenta",
+  "onboardingTitle": "Crea una cuenta Noba, ¡es gratis!",
   "personalAccount": "Cuenta personal",
   "businessAccount": "Cuenta de negocios",
   "titleNaturalPerson": "Personal",
