wip traduccion extract
(cherry picked from commit 5a9d458d82ffd016bbb6b3e29c0ef815a7452605)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -220,7 +220,8 @@
   "namePdfDepositFiatDomestic": "Domestic Deposit Instructions",
   "namePdfDepositFiatInternational": "International Deposit Instructions",
   "transactionHistory": "Transaction history",
-  "extractGenerated": "Extracted Generated",
+  "extractGenerated": "Generated Extract",
+  "extracts": "Extracts",
   "chooseExtract": "Choose the extract you want to see",
   "transactionType": "Transaction type",
   "assetType": "Asset type",
