feat: proceso de onboarding persona natural terminado.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -128,6 +128,7 @@
   "updatePasswordSuccessMessage": "Password successfully updated",
   "successfulOperation": "Successful operation",
   "shareholderDataSuccessSend": "Shareholder data sent correctly",
+  "documentAlreadyVerified": "documents have already been verified",
   "continue": "Continue",
   "addBeneficiaries": "Add Beneficiaries",
   "streetAddress": "Street Address",
@@ -440,5 +441,7 @@
   "anticipatedMonthlyTransactionsOutgoingLabel": "Outgoing Anticipated Monthly Transactions",
   "anticipatedMonthlyTransactionsOutgoingHelpText": "Estimate the volume of transactions you expect to make monthly. Example: from 1 to 49, from 50 to 99, from 100 to 499, etc.",
   "natureBusinessCompanyLabel": "Nature Business of the Company",
-  "natureBusinessCompanyHelpText": "Describe the industry and segment in which your company conducts business."
+  "natureBusinessCompanyHelpText": "Describe the industry and segment in which your company conducts business.",
+  "titleFinishOnboarding": "Thank you for your registration",
+  "descriptionFinishOnboarding": "Once your account is approved we will send you an email with the validation of your account."
 }
