--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -435,5 +435,6 @@
   "natureBusinessCompanyLabel": "Nature Business of the Company",
   "natureBusinessCompanyHelpText": "Describe the industry and segment in which your company conducts business.",
   "titleFinishOnboarding": "Gracias por su registro",
-  "descriptionFinishOnboarding": "Una vez aprobada tu cuenta te estaremos enviado un correo con la validación de su cuenta."
+  "descriptionFinishOnboarding": "Una vez aprobada tu cuenta te estaremos enviado un correo con la validación de su cuenta.",
+  "duplicateCompanyPhysicalAddress": "Click aquí si la dirección fisica es igual que la dirección de registro"
 }
