wip reactividad de cargar y editar partners

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -65,6 +65,8 @@
   "fileDescription": "Upload the document file here (supported format JPG, PNG or PDF)",
   "messageImageSize": "The file surpasses 4MB",
   "shareholders": "Shareholders",
+  "shareholderInformationLabel": "*Only for shareholders with more than 25% of the shares.",
+  "shareholdersAdded": "Added Shareholders",
   "shareholderTitle": "SHAREHOLDERS - UPLOAD OF DOCUMENTS",
   "shareholderFileFrontLabel": "Front side",
   "shareholderFileBackLabel": "Back side",
@@ -155,6 +157,7 @@
   "documentsPersonTitle": "Verify Documents",
   "documentsPersonText": "We are going to start with the document upload process for verification",
   "addNewShareHolder": "Add New Shareholder",
+  "addShareHolder": "Add Shareholder",
   "personalData": "Personal data",
   "dni": "Identity document",
   "contactInfo": "Contact information",
