--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -65,6 +65,8 @@
   "fileDescription": "Cargue el archivo del documento aquí (Formato admitido JPG, PNG o PDF)",
   "messageImageSize": "El archivo supera los 4Mb.",
   "shareholders": "Accionistas",
+  "shareholderInformationLabel": "*Solo para accionista con más de 25% de acciones.",
+  "shareholdersAdded": "Accionistas Añadidos",
   "shareholderTitle": "ACCIONISTAS - CARGA DE DOCUMENTOS",
   "shareholderFileFrontLabel": "Anverso",
   "shareholderFileBackLabel": "Reverso",
@@ -153,6 +155,7 @@
   "documentsPersonTitle": "Verificar los documentos",
   "documentsPersonText": "Vamos a comenzar con el proceso de carga de documentos para su verificación",
   "addNewShareHolder": "Añadir nuevo accionista",
+  "addShareHolder": "Añadir el accionista",
   "personalData": "Datos personales",
   "dni": "Documento de identidad",
   "contactInfo": "Información de contacto",
