--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -447,5 +447,6 @@
   "natureBusinessCompanyHelpText": "Describe the industry and segment in which your company conducts business.",
   "titleFinishOnboarding": "Thank you for your registration",
   "descriptionFinishOnboarding": "Once your account is approved we will send you an email with the validation of your account.",
-  "duplicateCompanyPhysicalAddress": "Click here if the physical address is the same as the registration address"
+  "duplicateCompanyPhysicalAddress": "Click here if the physical address is the same as the registration address",
+  "purposeWithdrawal": "Purpose of the withdrawal."
 }
