--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -448,5 +448,6 @@
   "titleFinishOnboarding": "Thank you for your registration",
   "descriptionFinishOnboarding": "Once your account is approved we will send you an email with the validation of your account.",
   "duplicateCompanyPhysicalAddress": "Click here if the physical address is the same as the registration address",
-  "purposeWithdrawal": "Purpose of the withdrawal."
+  "purposeWithdrawal": "Purpose of the withdrawal.",
+  "alreadyRegistered": "I have already registered I want to validate my email"
 }
