--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -449,5 +449,6 @@
   "descriptionFinishOnboarding": "Once your account is approved we will send you an email with the validation of your account.",
   "duplicateCompanyPhysicalAddress": "Click here if the physical address is the same as the registration address",
   "purposeWithdrawal": "Purpose of the withdrawal.",
-  "alreadyRegistered": "I have already registered I want to validate my email"
+  "alreadyRegistered": "I have already registered I want to validate my email",
+  "beneficiaryType": "Beneficiary type"
 }
