--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -441,5 +441,6 @@
   "descriptionFinishOnboarding": "Una vez aprobada tu cuenta te estaremos enviado un correo con la validación de su cuenta.",
   "duplicateCompanyPhysicalAddress": "Click aquí si la dirección fisica es igual que la dirección de registro",
   "purposeWithdrawal": "Objeto del retiro.",
-  "alreadyRegistered": "Ya me registre quiero validar mi correo"
+  "alreadyRegistered": "Ya me registre quiero validar mi correo",
+  "beneficiaryType": "Tipo de beneficiario"
 }
