se actualizo texto de las variables documentsPersonText,accountValidationProcess

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -155,7 +155,7 @@
   "forgotPasswordButton": "Send",
   "alreadyAccount": "Do you already have an account?",
   "documentsPersonTitle": "Verify Documents",
-  "documentsPersonText": "We are going to start with the document upload process for verification",
+  "documentsPersonText": "We are going to start with the document upload process for verification, It is necessary to upload all the requested documents",
   "addNewShareHolder": "Add New Shareholder",
   "addShareHolder": "Add Shareholder",
   "personalData": "Personal data",
@@ -205,7 +205,7 @@
   "backToDocuments": "Back to documents",
   "updateDocuments": "Update documents",
   "titleAccountValidationProcess": "Validation pending",
-  "accountValidationProcess": "Once your account is approved, we will send you an email with the validation of your account.",
+  "accountValidationProcess": "Your account will undergo a validation process, and once verified, you will be notified via email.",
   "documentProofOfAddress1": "Monthly utility bills (e.g., electricity, phone)",
   "documentProofOfAddress2": "Statements (e.g., bank, credit card)",
   "documentProofOfAddress3": "Rental Lease Agreement",
