--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -153,7 +153,7 @@
   "forgotPasswordButton": "Enviar",
   "alreadyAccount": "¿Ya tienes tu cuenta?",
   "documentsPersonTitle": "Verificar los documentos",
-  "documentsPersonText": "Vamos a comenzar con el proceso de carga de documentos para su verificación",
+  "documentsPersonText": "Vamos a comenzar con el proceso de carga de documentos para su verificación, es necesario subir todos los documentos solicitados",
   "addNewShareHolder": "Añadir nuevo accionista",
   "addShareHolder": "Añadir el accionista",
   "personalData": "Datos personales",
@@ -196,7 +196,7 @@
   "backToDocuments": "Volver a documentos",
   "updateDocuments": "Actualizar documentos",
   "titleAccountValidationProcess": "Validación pendiente",
-  "accountValidationProcess": "Una vez que su cuenta sea aprobada, le enviaremos un correo electrónico con la validación de su cuenta.",
+  "accountValidationProcess": "Su cuenta pasara por un proceso de validación, una vez verificada, se le notificara via correo electronico.",
   "documentProofOfAddress1": "Facturas mensuales de servicios públicos (por ejemplo, electricidad, teléfono)",
   "documentProofOfAddress2": "Estados de cuenta (por ejemplo, banco, tarjeta de crédito)",
   "documentProofOfAddress3": "Contrato de arrendamiento de alquiler",
