--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -196,7 +196,7 @@
   "backToDocuments": "Volver a documentos",
   "updateDocuments": "Actualizar documentos",
   "titleAccountValidationProcess": "Validación pendiente",
-  "accountValidationProcess": "Su cuenta pasara por un proceso de validación, una vez verificada, se le notificara via correo electronico.",
+  "accountValidationProcess": "Una vez que su cuenta sea aprobada, le enviaremos un correo electrónico con la validación de su cuenta.",
   "documentProofOfAddress1": "Facturas mensuales de servicios públicos (por ejemplo, electricidad, teléfono)",
   "documentProofOfAddress2": "Estados de cuenta (por ejemplo, banco, tarjeta de crédito)",
   "documentProofOfAddress3": "Contrato de arrendamiento de alquiler",
@@ -437,8 +437,8 @@
   "anticipatedMonthlyTransactionsOutgoingHelpText": "Estime el volumen de transacciones que espera hacer mensualmente. Ejemplo: de 1 a 49, de 50 a 99, de 100 a 499, etc.",
   "natureBusinessCompanyLabel": "Nature Business of the Company",
   "natureBusinessCompanyHelpText": "Describe the industry and segment in which your company conducts business.",
-  "titleFinishOnboarding": "Gracias por su registro",
-  "descriptionFinishOnboarding": "Una vez aprobada tu cuenta te estaremos enviado un correo con la validación de su cuenta.",
+  "titleFinishOnboarding": "Gracias por crear su cuenta",
+  "descriptionFinishOnboarding": "Su cuenta pasará por un proceso de validación, una vez verificada, se le notificará vía correo electrónico.",
   "duplicateCompanyPhysicalAddress": "Click aquí si la dirección fisica es igual que la dirección de registro",
   "purposeWithdrawal": "Objeto del retiro.",
   "alreadyRegistered": "Ya me registre quiero validar mi correo",
