[FEAT] Just selecting active counterparties

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -444,5 +444,7 @@
   "alreadyRegistered": "Ya me registre quiero validar mi correo",
   "beneficiaryType": "Tipo de beneficiario",
   "fileSizeError": "El archivo supera los 5Mb.",
-  "typeFileNotSelected": "Debe seleccionar el tipo de documento."
+  "typeFileNotSelected": "Debe seleccionar el tipo de documento.",
+  "beneficiaryPending": "Los datos del beneficiario estan siendo valdiados, le enviaremos un correo electronico tan pronto sea aprobado",
+  "beneficiaryRejected": "El beneficiario fue rechazado, no sera posible hacer transacciones con el."
 }
