[FEAT] Just selecting active counterparties FIAT

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -454,5 +454,5 @@
   "fileSizeError": "The file is larger than 5Mb.",
   "typeFileNotSelected": "You must select the document type.",
   "beneficiaryPending": "The user is being validated, we will let you know when is available.",
-  "beneficiaryRejected": "The user has being rejected, is not available."
+  "beneficiaryRejected": "The beneficiary has being rejected, is not available."
 }
